--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hellmutt",
-  "homepage": "https://tymon1.github.io/hlm",
+  "omepage": "https://tymon1.github.io/hlm",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
